# crack

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/crack/: base.py  cli.py  config.py  demo.py
src/crack/atlassian/: atlassian.py
src/crack/dbeaver/: dbeaver-ee-public.key  dbeaver.py  license.json
src/crack/finalshell/: finalshell.py
src/crack/gitlab/: gitlab.py
src/crack/jetbrains/: account.py  fetch.py  jetbra.py  jetbrains.py  licenses.json  licenses_base.json  licenses_full.json  plugins.json  plugins.py  server.py
src/crack/surely/: surely.py
src/crack/typora/: typora.py
src/crack/xmind/: old.pem  xmind.py
src/crack/xmind/crack/: hook.js
src/crack/xmind/crack/hook/: crypto.js  electron.js  note.txt
tests/: __init__.py  test_base.py  test_config.py
