[project]
name = "crack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "asarpy>=1.0.1",
    "click>=8.2.2",
    "crypto-plus>=1.0.6",
    "fastapi>=0.116.1",
    "grequests>=0.7.0",
    "h11>=0.16.0",
    "lxml>=6.0.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pysocks>=1.7.1",
    "requests>=2.32.4",
    "starlette>=0.47.2",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
